--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,12 @@
+@import "reset";
 
+#header {
+  .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+      a{
+      color: red;
+    }
+  }
+}
