--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+.container {
+  width: 85%;
+  margin: 0 auto;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+}
+
+a, a:hover {
+  text-decoration: none;
+}
+
+#header .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#header .header a {
+  color: red;
+}
 
 /*# sourceMappingURL=style.css.map */
